deploy/k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tablee
  namespace: tablee
spec:
  selector:
    app: tablee
  ports:
    - name: http
      port: 80
      targetPort: http
